# TigerShark

./: .gitignore  LICENSE  README  README.md  TODO.md  path.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  tox.ini  tox_env.sh
X12/: __init__.py  file.py  parse.py
X12-0.08/: CHANGES  MANIFEST  Makefile.PL  README  Readme.pod  X12ParserReadme - understanding configuration (cf) files for X12Parser - search_cpan_org.htm
X12N-SEF/: 837_X096.SEF  837_X097.SEF  837_X098.SEF
claims/: __init__.py
demo/: dump_837.py
doc/: tiger.zargo
docs/: Makefile  design.zargo  index.html  make.bat
extras/: standardSegment.py
facade/: __init__.py  f835.py
old_doc_source/: overview.rst  usecase.rst
test/: 835-example.edi  835_test.py  837I-Patient-Subscriber.txt  TEST 276 TXNs.txt  TEST 278_13 TXNS.txt  TEST 278_28 TXNS_SOA.txt  example_278_deep.py  test_convert.py  test_description.csv  test_navigation.py  test_parse.py
tests/: 271-dependent-benefits.txt  271-example-2.txt  271-example-dependent-rejection.txt  271-related-entity.txt  271_test.py  278.4010.X094.A1.xml  834-example.txt  835-example.txt  835_test.py  837-example.txt  837I-Examples.txt  837I-Patient-NotSubscriber.txt  837I-Patient-NotSubscriber2.txt  837I-Patient-Subscriber.txt  M835_4010_X091_A1.py  TEST 276 TXNs.txt  TEST 278_13 TXNS.txt  TEST 278_28 TXNS_SOA.txt  __init__.py  debug.py  run_tests.py  temp.html  test_271.py  test_271_2.py  test_271_dependent_rejection.py  test_271_related_entity.py  test_835.py  test_convert.py  test_description.csv  test_example_files.py  test_parse.py  (+7 more)
(+212 files in other folders)
