[build-system]
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "TigerShark3"
description = "TigerShark3: An X12/EDI file parser"
version = "3.0"
readme = "README.md"
authors = [
  {name = "Steven Buss", email = "steven.buss@gmail.com"},
  {name = "Steven Lott", email = "slott56@email.com"},
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing",
  "Topic :: File Formats",
  "Topic :: Office/Business",
  "Typing :: Typed",
]

[tool.setuptools]
packages = [
  "tigershark3",
  "tigershark3.tools",
  "tigershark3.x12",
]

[project.scripts]
x12-build = "tigershark3.tools.xml_extract:main"

[project.optional-dependencies]
dev = [
    "sphinx==5.0.2",
    "sphinxcontrib-plantuml==0.25",
    "pip-tools==6.13.0"
]
test = [
    "pytest==7.3.1",
    "pytest-cov==4.0.0",
    "tox==4.5.1",
    "mypy==1.3.0",
    "behave==1.2.6"
]
